tests/verbatim_scanner/negative/paragraph_with_colon.txxt
Expected: []
This is a paragraph:
This should be normal text.